src/objects/NDA_CompanyContact__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Multiparty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Multiparty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Phone__c</fullName>
        <label>Legacy Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Migration ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDACompany__c</fullName>
        <label>NDA Company</label>
        <referenceTo>NDA_Company__c</referenceTo>
        <relationshipLabel>NDA Company Contacts</relationshipLabel>
        <relationshipName>NDA_Company_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>NDA Company Contact</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDA Company Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>